Added client-side JS PE
If js is enabled, use it to fetch ingredients without requiring page reload etc...

--- a/server/static/style/index.css
+++ b/server/static/style/index.css
@@ -58,8 +58,11 @@ main>form {
 	font-size: 2rem;
 }
 
-footer>#ingredients {
+footer {
+	perspective: 8cm;
+} footer>#ingredients {
 	position: absolute;
+	transform: rotateX(20deg);
 } footer>#ingredients>svg {
 	width: 200px;
 	position: absolute;
