--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +24,7 @@
 	<header>Maak je tost-o</header>
 	<main>
 		<form method="POST" action="/add">
+			<label class="accessibility-hidden">Kies een ingrediënt om aan je tosti toe te voegen.</label>
 			<button type="submit" name="ingredient" value="brood-wit">Wit brood</button>
 			<button type="submit" name="ingredient" value="brood-zwart">Zwart brood</button>
 			<button type="submit" name="ingredient" value="sla-ijsberg">IJsbergsla</button>
