--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Leckerli+One" rel="stylesheet">
 	<link rel="stylesheet" href="style/index.css">
-	<script src="javascript/index.js" type="module"></script>
+	<script src="javascript/index.js" defer></script>
 	<% if (ingredients.length) { %>
 		<style>
 			<% for (const i in ingredients) { %>
@@ -46,7 +46,9 @@
 		</div>
 		<div id="buttons">
 			<a href="/clear" id="clear">Begin opnieuw</a>
-			<a href="/done" id="done">Bestellen</a>
+			<form id="doneform" action="/done" method="POST">
+				<button type ="submit" id="done">Bestellen</button>
+			</form>
 		</div>
 	</footer>
 </body>
