--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Leckerli+One" rel="stylesheet">
 	<link rel="stylesheet" href="style/index.css">
+	<script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js" defer></script>
+	<script src="https://unpkg.com/unfetch/polyfill" defer></script>
 	<script src="javascript/index.js" defer></script>
 	<% if (ingredients.length) { %>
 		<style>
