Added done page handler

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -25,7 +25,7 @@
 <body>
 	<header>Maak je tost-o</header>
 	<main>
-		<form method="POST" action="/add">
+		<form autofocus method="POST" action="/add">
 			<label class="accessibility-hidden">Kies een ingrediënt om aan je tosti toe te voegen.</label>
 			<button type="submit" name="ingredient" value="brood-wit">Wit brood</button>
 			<button type="submit" name="ingredient" value="brood-zwart">Zwart brood</button>
